:recycle: Fix alignment of filters
After the garden refactor for filters their alignment was a little off on some pages.

--- a/app/javascript/components/Toolbar/main.css
+++ b/app/javascript/components/Toolbar/main.css
@@ -53,12 +53,7 @@
   justify-content: space-between;
 }
 
-.filterDropdowns {
-  display: flex;
-}
-
 .viewBtns {
   display: flex;
   align-items: flex-end;
 }
-
